--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,13 +38,12 @@ Source = "https://github.com/unknown/nqx"
 
 [project.scripts]
 nqx = "nqx.cli:main"
-nqx_exe = "nqx.cli:main"
 
 [tool.hatch.version]
 path = "src/nqx/__about__.py"
 
 [tool.hatch.build.targets.binary]
-scripts = ["nqx", "nqx_exe"]
+scripts = ["nqx"]
 
 [tool.hatch.build.targets.wheel.force-include]
 "src/etc" = "etc"
